# secret_heights

./: CMakeLists.txt  README.md  main.cpp
data/: log1_smoothed.csv  log2_smoothed.csv  plotting_data.py
include/: height_estimate.h
src/: CMakeLists.txt  dharas_understanding.md  height_estimate.cpp
